# ci_cd-example

./: .gitlab-ci.yml  CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
tests/: AggregatorTests.cpp  CMakeLists.txt
